--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 .title {
   text-align: center;
   text-transform: capitalize;
@@ -23,4 +14,5 @@ body {
   display: block;
   width: 200px;
   margin: 1rem auto;
+  box-sizing: border-box;
 }
